# solo-odds

./: .gitignore  LICENSE  NOTES.md  README.md  pyproject.toml
schemas/: report.schema.json
scripts/: generate_og.py
src/solo_odds/: cli.py  units.py
src/solo_odds/data/: fetch.py  models.py  store.py
src/solo_odds/math/: analytic.py  drift.py  economic_compare.py
src/solo_odds/sim/: monte_carlo.py
tests/: test_analytic.py  test_cli_basic.py  test_curve_logic.py  test_drift.py  test_monte_carlo.py  test_schema_validation.py  test_smoke.py  test_store.py  test_units.py
web/: app.py  install_notes.txt  requirements.txt  solo-odds-web.service
web/static/: robots.txt  site.css  sitemap.xml
web/templates/: compare.html  compare_form.html  compare_report.html  index.html  methods.html  report.html  solo-vs-pool-risk-first.html
