[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solo-odds"
version = "0.1.0"
description = "Solo mining probability and variance engine (BTC/BCH)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"typer>=0.12",
"requests>=2.31",
]

[project.optional-dependencies]
dev = [
"pytest>=8.0",
"ruff>=0.4",
"jsonschema",
]

[project.scripts]
solo-odds = "solo_odds.cli:app"

[tool.ruff]
line-length = 100
